--- a/admin-interface.html
+++ b/admin-interface.html
@@ -757,6 +757,7 @@
                             </div>
                         </div>
                     </div>
+                    <a href="login.html" class="nav-link" onclick="localStorage.removeItem('userSession');" style="background: #fee2e2; color: #dc2626;">تسجيل الخروج</a>
                     <a href="settings-interface.html" class="nav-link settings">الإعدادات</a>
                     <a href="nurse-interface.html" class="nav-link">صفحة التمريض</a>
                     <a href="driver-interface.html" class="nav-link">صفحة السائق</a>
@@ -914,7 +915,7 @@
         // ============================================
         // CONFIGURATION - UPDATE THIS URL
         // ============================================
-        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzgjramV6C5fGt3QM1je34oRXAbfje__vrbxJGoBkkOo2oodydEcdUfkB4avqf2-PR8lg/exec';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwDUAGlnGBKZMhq8UbzEYBUaP3UNi49Be5PdwqQfnyIiB1HomgXVLrmUTrgeLKhyb-j/exec';
         
         let currentRecord = null;
         let allRecords = [];
