--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - نظام سجل الإسعاف</title>
+    <title>Ambulance Reg System | نظام سجل الإسعاف - تسجيل الدخول</title>
     
     <!-- HTML Meta Tags -->
-    <meta name="description" content="Ambulance Activity Log System - نظام سجل رحلات الإسعاف | Hasik Health Center - مركز حاسك الصحي">
+    <meta name="description" content="Ambulance Reg System - Ambulance Activity Log | نظام سجل الإسعاف - سجل رحلات الإسعاف | Ministry of Health - Hasik Health Center | وزارة الصحة - مركز حاسك الصحي">
     <meta name="theme-color" content="#1e40af">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -15,9 +15,12 @@
     <!-- Facebook / Open Graph Meta Tags -->
     <meta property="og:url" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/login.html">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Login | تسجيل الدخول - Ambulance Log System | نظام سجل الإسعاف">
-    <meta property="og:description" content="Hasik Health Center - Ambulance Activity Log System | مركز حاسك الصحي - نظام سجل رحلات الإسعاف">
-    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-logo.png">
+    <meta property="og:title" content="Ambulance Reg System | نظام سجل الإسعاف">
+    <meta property="og:description" content="Ministry of Health - Hasik Health Center | Ambulance Activity Log System | وزارة الصحة - مركز حاسك الصحي | نظام سجل رحلات الإسعاف">
+    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:image:alt" content="Ministry of Health Oman - Ambulance Reg System | وزارة الصحة عُمان - نظام سجل الإسعاف">
     <meta property="og:site_name" content="Hasik Health Center | مركز حاسك الصحي">
     <meta property="og:locale" content="ar_SA">
     <meta property="og:locale:alternate" content="en_US">
@@ -26,9 +29,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="officerhasikhc-design.github.io">
     <meta property="twitter:url" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/login.html">
-    <meta name="twitter:title" content="Login | تسجيل الدخول - Ambulance Log System | نظام سجل الإسعاف">
-    <meta name="twitter:description" content="Hasik Health Center - Ambulance Activity Log System | مركز حاسك الصحي - نظام سجل رحلات الإسعاف">
-    <meta name="twitter:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-logo.png">
+    <meta name="twitter:title" content="Ambulance Reg System | نظام سجل الإسعاف">
+    <meta name="twitter:description" content="Ministry of Health - Hasik Health Center | Ambulance Activity Log System | وزارة الصحة - مركز حاسك الصحي | نظام سجل رحلات الإسعاف">
+    <meta name="twitter:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="moh-logo.png">
     <link rel="apple-touch-icon" href="moh-logo.png">
