--- a/settings-interface.html
+++ b/settings-interface.html
@@ -9,7 +9,7 @@
     <meta name="description" content="إعدادات نظام تسجيل رحلات الإسعاف - المديرية العامة للخدمات الصحية بمحافظة ظفار - مركز حاسك الصحي">
     <meta property="og:title" content="إعدادات النظام - نظام سجل الإسعاف">
     <meta property="og:description" content="إعدادات نظام تسجيل رحلات الإسعاف - المديرية العامة للخدمات الصحية بمحافظة ظفار - مركز حاسك الصحي">
-    <meta property="og:image" content="https://superabdoo88-jpg.github.io/Ambulance-Activity-Log/moh-logo.png">
+    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_OM">
     <meta property="og:site_name" content="نظام سجل الإسعاف">
