--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
     <!-- Facebook / Open Graph Meta Tags -->
     <meta property="og:url" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/login.html">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Ambulance Reg System | نظام سجل الإسعاف">
+    <meta property="og:title" content="Ambulance Reg System | نظام سجل الإسعاف - Ministry of Health">
     <meta property="og:description" content="Ministry of Health - Hasik Health Center | Ambulance Activity Log System | وزارة الصحة - مركز حاسك الصحي | نظام سجل رحلات الإسعاف">
-    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
-    <meta property="og:image:width" content="1024">
-    <meta property="og:image:height" content="1024">
+    <meta property="og:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Ministry of Health Oman - Ambulance Reg System | وزارة الصحة عُمان - نظام سجل الإسعاف">
     <meta property="og:site_name" content="Hasik Health Center | مركز حاسك الصحي">
     <meta property="og:locale" content="ar_SA">
@@ -29,9 +29,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="officerhasikhc-design.github.io">
     <meta property="twitter:url" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/login.html">
-    <meta name="twitter:title" content="Ambulance Reg System | نظام سجل الإسعاف">
+    <meta name="twitter:title" content="Ambulance Reg System | نظام سجل الإسعاف - Ministry of Health">
     <meta name="twitter:description" content="Ministry of Health - Hasik Health Center | Ambulance Activity Log System | وزارة الصحة - مركز حاسك الصحي | نظام سجل رحلات الإسعاف">
-    <meta name="twitter:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/moh-photo_Page_1.png">
+    <meta name="twitter:image" content="https://officerhasikhc-design.github.io/Register-ambulance-Transfer/og-image.png">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="moh-logo.png">
     <link rel="apple-touch-icon" href="moh-logo.png">
