--- a/nurse-interface.html
+++ b/nurse-interface.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ambulance Activity Log - Hasik Health Center</title>
+    <script src="session-manager.js"></script>
     
     <!-- Open Graph Meta Tags for WhatsApp, Email, etc -->
     <meta name="description" content="Ambulance Trip Registration and Documentation System - Hasik Health Center">
