--- a/admin-interface.html
+++ b/admin-interface.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة الإدارة - سجل نشاط الإسعاف</title>
+    <script src="session-manager.js"></script>
     
     <!-- Open Graph Meta Tags for WhatsApp, Email, etc -->
     <meta name="description" content="لوحة إدارة نظام تسجيل رحلات الإسعاف - المديرية العامة للخدمات الصحية بمحافظة ظفار - مركز حاسك الصحي">
